kind/nerdy-jokes-app/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nerdy-jokes-app-ingress
  namespace: dev
spec:
  rules:
    - http:
        paths:
          - path: /api/v1
            backend:
              serviceName: nerdy-jokes-app
              servicePort: 80
